[Site] Fix breakage of start command on homepage on mobile

--- a/site/src/scss/_homepage.scss
+++ b/site/src/scss/_homepage.scss
@@ -212,6 +212,11 @@
     text-transform: uppercase;
     margin-bottom: 0;
   }
+  code {
+    background: transparent;
+    border: none;
+    color: inherit;
+  }
   .intro + .content {
     margin-top: rem-calc(40);
   }
